--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -5,11 +5,10 @@ services:
     ports:
       - "3333:3333"
   grafana: # Grafana
-    image: grafana/grafana:6.5.2
+    image: grafana/grafana:8.1.2
     ports:
       - "3000:3000"
     environment:
       GF_LOG_LEVEL: debug
     volumes:
-      - /var/lib/grafana
-      - .:/var/lib/grafana/plugins/simple-json-backend
+      - ./dist:/var/lib/grafana/plugins/simple-json-pkg
